# Change Log
[O.F.Device (Ore Farming Device)](https://github.com/Iunius118/O.F.Device#readme).
[Source](https://github.com/Iunius118/O.F.Device).

## [Unreleased]

## [12.0.0 Forge]
### Changed
- Port to 1.21.11.
- Require Forge 1.21.11-61.0.2+.

## [11.0.0 Forge]
### Changed
- Port to 1.21.9.
- Require Forge 1.21.9-59.0.1+.

## [10.0.0 Forge]
### Changed
- Port to 1.21.6.
- Require Forge 1.21.6-56.0.2+.

## [9.0.0 Forge]
### Changed
- Port to 1.21.5.
- Require Forge 1.21.5-55.0.9+.

### Fixed
- Mod game tests.

## [8.0.0 Forge]
### Changed
- Port to 1.21.4.
- Require Forge 1.21.4-54.0.6+.

## [7.0.0 Forge]
### Changed
- Port to 1.21.3.
- Require Forge 1.21.3-53.0.7+.
- Use sprite textures in OF device GUI.

## [6.1.0 Forge]
### Added
- Add OF C Device, a cobblestone generator.

## [6.0.0 Forge]
### Changed
- Port to 1.21.
- Require Forge 1.21-51.0.21+.

## [5.0.0 Forge]
### Changed
- Port to 1.20.6.
- Require Forge 1.20.6-50.0.8+.

### Fixed
- Fix access to unloaded config values.

## [4.0.1 Forge]
### Fixed
- Recipe type for OF devices.

## [4.0.0]
### Changed
- Release.

## [4.0.0-beta.4]
### Added
- Six new looks to OF device blocks. Stick can be used on placed OF device blocks to change their appearance.

### Fixed
- Quick movement of item stack from player inventory to material slot.

## [4.0.0-beta.3]
### Fixed
- Recipe of recycling OF C Feeder I.

## [4.0.0-beta.2]
### Added
- OF C Feeder II item. This item is the improved version of OF C Feeder I and does not increase fuel consumption.

### Changed
- Rename OF Cobblestone Feeder to OF C Feeder I.

### Removed
- Server-side config item: `cobblestoneFeederConsumesDoubleFuel`.

## [4.0.0-beta.1]
### Added
- Server-side config item: `cobblestoneFeederConsumesDoubleFuel`.

### Changed
- Require Forge 1.20.2-48.0.33+.
- OF Cobblestone Feeder now consumes twice as much fuel as the previous version.
- Bump version.

## [0.9.0]
### Changed
- Port to 1.20.2.
- Require Forge 1.20.2-48.0.1+.